--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="WarotterApplication" android:theme="@style/AppTheme">
-        <activity android:label="@string/app_name" android:name=".view.StartActivity" android:launchMode="singleTask">
+        <activity android:label="@string/app_name" android:name=".view.StartActivity" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
