--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?><manifest android:versionCode="1" android:versionName="1.0" package="net.miz_hi.warotter" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="WarotterApplication" android:theme="@style/AppTheme">
-        <activity android:label="@string/app_name" android:launchMode="standard" android:name=".view.StartActivity">
+        <activity android:label="@string/app_name" android:launchMode="standard" android:name=".view.StartActivity" android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:launchMode="standard" android:name=".view.WebViewActivity"/><activity android:label="MainActivity" android:name=".view.MainActivity" android:launchMode="singleTop"/></application>
+        <activity android:launchMode="standard" android:name=".view.WebViewActivity"/><activity android:label="MainActivity" android:name=".view.MainActivity" android:launchMode="singleTask" android:configChanges="orientation"/></application>
 
 </manifest>
