--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-10
-android.library.reference.1=../SlidingMenuActivity
+target=android-14
+android.library.reference.1=..\\SlidingMenuActivity
+android.library.reference.2=../ActionBarSherlockLib
