--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,14 +5,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="net.miz_hi.smileessence.ClientApplication" android:theme="@style/AppTheme">
-        <activity android:label="@string/app_name" android:launchMode="standard" android:name=".view.StartActivity" android:configChanges="orientation">
+        <activity android:label="@string/app_name" android:name=".view.MainActivity" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:configChanges="keyboardHidden|orientation|screenLayout">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:launchMode="standard" android:name=".view.WebViewActivity" android:configChanges="keyboardHidden|orientation"/><activity android:label="@string/app_name" android:name=".view.MainActivity" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:configChanges="keyboardHidden|orientation|screenLayout"/>
+        </activity><activity android:launchMode="standard" android:name=".view.WebViewActivity" android:configChanges="keyboardHidden|orientation"/>
         <activity android:name=".view.SettingActivity" android:launchMode="standard" android:configChanges="keyboardHidden|orientation"></activity>
 </application>
 
