--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,18 @@
-<?xml version="1.0" encoding="utf-8" standalone="no"?><manifest android:versionCode="3" android:versionName="alpha-release 3" package="net.miz_hi.smileessence" xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8" standalone="no"?><manifest android:versionCode="4" android:versionName="alpha-release 4" package="net.miz_hi.smileessence" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="10"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="net.miz_hi.smileessence.ClientApplication" android:theme="@style/AppTheme">
-        <activity android:label="@string/app_name" android:name=".view.MainActivity" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:configChanges="keyboardHidden|orientation|screenLayout">
+        <activity android:label="@string/app_name" android:name=".activity.MainActivity" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:configChanges="keyboardHidden|orientation|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><activity android:launchMode="standard" android:name=".view.WebViewActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity android:name=".view.SettingActivity" android:launchMode="standard" android:configChanges="keyboardHidden|orientation"></activity>
+        </activity><activity android:launchMode="standard" android:name=".activity.WebViewActivity" android:configChanges="keyboardHidden|orientation"/>
+        <activity android:name=".activity.SettingActivity" android:launchMode="standard" android:configChanges="keyboardHidden|orientation"></activity>
+        <activity android:name=".activity.UserActivity" android:configChanges="keyboard|orientation"></activity>
 </application>
 
 </manifest>
