定型文機能完成。 Close #11, Close #12

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
         </activity><activity android:launchMode="standard" android:name=".view.WebViewActivity" android:configChanges="keyboardHidden|orientation"/>
         <activity android:name=".view.SettingActivity" android:launchMode="standard" android:configChanges="keyboardHidden|orientation"></activity>
         <activity android:name=".view.UserActivity" android:configChanges="keyboard|orientation"></activity>
+        <activity android:name=".view.TemplateActivity" android:configChanges="orientation"></activity>
 </application>
 
 </manifest>
