--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="D:/User/Projects/Android/eclipse/SmileEssenceLite/libs/android-support-v13.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/D:/User/Projects/Android/eclipse/SmileEssenceLite/libs/android-support-v13-docs.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
