ワロッター機能の継承、削除実装、ユーザー情報アクティビティ改善

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/net/miz_hi/smileessence/command/StatusCommandNanigaja.java=UTF-8
 encoding//src/net/miz_hi/smileessence/util/TwitterManager.java=UTF-8
