--- a/.classpath
+++ b/.classpath
@@ -3,11 +3,12 @@
 	<classpathentry excluding="net/miz_hi/smileessence/view/TweetView.java|net/miz_hi/smileessence/listener/TweetViewTouchListener.java|net/miz_hi/smileessence/view/UserActivity.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="D:/User/Projects/Android/eclipse/SmileEssenceLite/libs/android-support-v13.jar">
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="lib" path="D:/User/Projects/Android/eclipse/SmileEssenceLite/libs/android-support-v13.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/D:/User/Projects/Android/eclipse/SmileEssenceLite/libs/android-support-v13-docs.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
