--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,93 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
-<manifest android:versionCode="24" android:versionName="beta1.4.1" package="net.miz_hi.smileessence" xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="net.miz_hi.smileessence"
+    android:versionCode="24"
+    android:versionName="beta1.4.1" >
 
-    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="14"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="14" />
 
-    <application android:allowBackup="true" android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name="net.miz_hi.smileessence.ClientApplication" android:theme="@style/AppTheme">
-        <activity android:label="@string/app_name" android:name=".view.MainActivity" android:launchMode="singleTask" android:windowSoftInputMode="stateHidden|adjustNothing" android:configChanges="keyboardHidden|orientation|screenSize">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <application
+        android:name="net.miz_hi.smileessence.ClientApplication"
+        android:allowBackup="true"
+        android:debuggable="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".view.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="stateHidden|adjustNothing" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><activity android:launchMode="standard" android:name=".view.WebViewActivity" android:configChanges="keyboardHidden|orientation"/>
-        <activity android:name=".view.SettingActivity" android:launchMode="standard" android:configChanges="keyboardHidden|orientation"></activity>
-        <activity android:name=".view.TemplateActivity" android:configChanges="orientation"></activity>
-        <activity android:name=".view.ExtraWordActivity" android:configChanges="orientation"></activity>
-</application>
+            <intent-filter
+                android:label="つぶやく">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="twitter.com"
+                    android:path="/share"
+                    android:scheme="https" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="twitter.com"
+                    android:scheme="http" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="twitter.com"
+                    android:scheme="https" />
+            </intent-filter>
+            <intent-filter
+                android:label="つぶやく">
+                <action android:name="android.intent.action.SEND" />
+
+                <data android:mimeType="text/plain" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.WebViewActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="standard" />
+        <activity
+            android:name=".view.SettingActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="standard" >
+        </activity>
+        <activity
+            android:name=".view.TemplateActivity"
+            android:configChanges="orientation" >
+        </activity>
+        <activity
+            android:name=".view.ExtraWordActivity"
+            android:configChanges="orientation" >
+        </activity>
+    </application>
 
 </manifest>
