もうこれわかんねえな

--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-14
 android.library.reference.1=..\\ViewPagerIndicator
-android.library.reference.2=../Crouton/library
+android.library.reference.2=..\\Crouton
