--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.miz_hi.smileessence"
-    android:versionCode="31"
-    android:versionName="beta1.4.25" >
+    android:versionCode="32"
+    android:versionName="@string/app_version" >
 
     <uses-sdk
         android:minSdkVersion="14"
