--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,4 @@
 target=android-14
 android.library.reference.1=..\\ViewPagerIndicator
 android.library.reference.2=..\\Crouton
+android.library.reference.3=../SlidingMenu
