--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,92 +1,92 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.miz_hi.smileessence"
-    android:versionCode="40"
-    android:versionName="@string/app_version" >
+          package="net.miz_hi.smileessence"
+          android:versionCode="40"
+          android:versionName="@string/app_version">
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="14" />
+            android:minSdkVersion="14"
+            android:targetSdkVersion="14"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:name="net.miz_hi.smileessence.ClientApplication"
-        android:allowBackup="true"
-        android:debuggable="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="net.miz_hi.smileessence.view.activity.MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:name="net.miz_hi.smileessence.ClientApplication"
+            android:allowBackup="true"
+            android:debuggable="true"
+            android:icon="@drawable/app_icon"
             android:label="@string/app_name"
-            android:launchMode="singleTask"
-            android:windowSoftInputMode="stateHidden|adjustNothing" >
+            android:theme="@style/AppTheme">
+        <activity
+                android:name="net.miz_hi.smileessence.view.activity.MainActivity"
+                android:configChanges="keyboardHidden|orientation|screenSize"
+                android:label="@string/app_name"
+                android:launchMode="singleTask"
+                android:windowSoftInputMode="stateHidden|adjustNothing">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             <intent-filter
-                android:label="つぶやく">
-                <action android:name="android.intent.action.VIEW" />
+                    android:label="つぶやく">
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
 
                 <data
-                    android:host="twitter.com"
-                    android:path="/share"
-                    android:scheme="https" />
+                        android:host="twitter.com"
+                        android:path="/share"
+                        android:scheme="https"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
 
                 <data
-                    android:host="twitter.com"
-                    android:scheme="http" />
+                        android:host="twitter.com"
+                        android:scheme="http"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
 
                 <data
-                    android:host="twitter.com"
-                    android:scheme="https" />
+                        android:host="twitter.com"
+                        android:scheme="https"/>
             </intent-filter>
             <intent-filter
-                android:label="つぶやく">
-                <action android:name="android.intent.action.SEND" />
+                    android:label="つぶやく">
+                <action android:name="android.intent.action.SEND"/>
 
-                <data android:mimeType="text/plain" />
+                <data android:mimeType="text/plain"/>
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
         <activity
-            android:name="net.miz_hi.smileessence.view.activity.WebViewActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:launchMode="standard" />
+                android:name="net.miz_hi.smileessence.view.activity.WebViewActivity"
+                android:configChanges="keyboardHidden|orientation"
+                android:launchMode="standard"/>
         <activity
-            android:name="net.miz_hi.smileessence.view.activity.SettingActivity"
-            android:configChanges="keyboardHidden|orientation"
-            android:launchMode="standard" >
+                android:name="net.miz_hi.smileessence.view.activity.SettingActivity"
+                android:configChanges="keyboardHidden|orientation"
+                android:launchMode="standard">
         </activity>
         <activity
-            android:name="net.miz_hi.smileessence.view.activity.TemplateActivity"
-            android:configChanges="orientation" >
+                android:name="net.miz_hi.smileessence.view.activity.TemplateActivity"
+                android:configChanges="orientation">
         </activity>
         <activity
-            android:name="net.miz_hi.smileessence.view.activity.ExtraWordActivity"
-            android:configChanges="orientation" >
+                android:name="net.miz_hi.smileessence.view.activity.ExtraWordActivity"
+                android:configChanges="orientation">
         </activity>
     </application>
 
