--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,21 +29,22 @@
           android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="14"/>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="@string/app_name"
         android:name=".Application"
         android:icon="@drawable/ic_launcher">
         <meta-data
             android:name="AA_DB_NAME"
-            android:value="app.db"></meta-data>
+            android:value="app.db"/>
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="1"></meta-data>
+            android:value="1"/>
 
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
