--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,5 +50,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.WebViewActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="standard"/>
     </application>
 </manifest>
