Implement ImageCache and add dependency to Volley.

--- a/project.properties
+++ b/project.properties
@@ -37,4 +37,5 @@
 # Project target.
 target=android-19
 android.library.reference.1=../Android-Libs/Crouton/library/src/main
-android.library.reference.2=../Android-Libs/Android-ViewPagerIndicator/library
+android.library.reference.2=../Android-Libs/volley
+
