--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,10 @@
           android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="14"/>
+
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:label="@string/app_name"
         android:name=".Application"
