Add SettingActivity and SettingFragment (not yet implemented)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,5 +57,9 @@
             android:name=".activity.WebViewActivity"
             android:configChanges="keyboardHidden|orientation"
             android:launchMode="standard"/>
+        <activity
+            android:name=".activity.SettingActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:launchMode="standard"/>
     </application>
 </manifest>
