--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,7 @@
     <application
         android:label="@string/app_name"
         android:name=".Application"
-        android:icon="@drawable/ic_launcher">
+        android:icon="@drawable/icon_application">
         <meta-data
             android:name="AA_DB_NAME"
             android:value="app.db"/>
