--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ out
 /SmileEssenceTest/proguard-project.txt
 /src/twitter4j.properties
 /SmileEssenceTest/assets/tokens.json
+/Test Results - AllTest.html
