Add dependency: PullToRefresh

--- a/project.properties
+++ b/project.properties
@@ -38,4 +38,5 @@
 target=android-19
 android.library.reference.1=../Android-Libs/Crouton/library/src/main
 android.library.reference.2=../Android-Libs/volley
+android.library.reference.3=../Android-Libs/Android-PullToRefresh/library
 
