--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -83,5 +83,9 @@
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/activity_edit_command"
             android:parentActivityName="net.lacolaco.smileessence.activity.MainActivity"/>
+        <activity
+            android:name=".activity.LicenseActivity"
+            android:label="@string/activity_licenses"
+            android:parentActivityName="net.lacolaco.smileessence.activity.SettingActivity"/>
     </application>
 </manifest>
