--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,9 +26,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="net.lacolaco.smileessence"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="@string/app_version">
 
-    <uses-sdk
+<uses-sdk
         android:minSdkVersion="17"
         android:targetSdkVersion="19"/>
 
