All dependencies are solved in root project

--- a/project.properties
+++ b/project.properties
@@ -36,7 +36,7 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../Android-Libs/Crouton/library/src/main
-android.library.reference.2=../Android-Libs/volley
-android.library.reference.3=../Android-Libs/Android-PullToRefresh/library
+android.library.reference.1=modules/crouton/library/src/main
+android.library.reference.2=modules/volley
+android.library.reference.3=modules/android-pull-to-refresh/library
 
