Close #38 Adjust post fragment

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -53,8 +53,8 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            android:windowSoftInputMode="stateHidden|adjustNothing">
-            <intent-filter>
+            android:windowSoftInputMode="stateHidden|adjustResize">
+        <intent-filter>
             <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
