--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "net.lacolaco.smileessence"
+        applicationId "jp.rhe.smileessence"
         minSdkVersion 19
         targetSdkVersion 19
         versionCode 1
