--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ before_script:
   - adb shell input keyevent 82 &
 script:
   - sh build.sh
+notifications:
+  email:
+    - laco0416+travis@gmail.com
