--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
     defaultConfig {
         applicationId "net.lacolaco.smileessence"
         minSdkVersion 17
+        maxSdkVersion 19
         targetSdkVersion 19
         versionCode 25
         versionName "1.0.11.1"
